# v8_reader_cpp17

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  plan_detail.md  plan_go.md  read_cf.md  read_cf_1.md  read_cf_plan.md  result_analise.md  var_buildMetadataTree.md  vcpkg.json
.github/workflows/: ci.yml
src/: V8Catalog.cpp  V8Unpacker.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  MetadataTreeBuilder.cpp  MetadataTreeBuilder.h
src/core/include/v8reader/core/: IV8Repository.h  TreeReader.h  Types.h  V8Catalog.h  V8Container.h  V8Element.h  V8File.h  V8Format.h  V8Unpacker.h  v8_constants.h
src/core/include/v8reader/core/metadata/: MetadataFactory.h  TMDO.h  TRequisite.h  t_catalog.h  t_comand.h  t_document.h  t_metadata_object_with_sections.h  t_moxel.cpp  t_moxel.h  t_tabular.cpp  t_tabular.h
src/core/include/v8reader/core/metadata/sections/: section_commands.h  section_requisites.h
src/core/include/v8reader/types/: v8_types.h
src/core/src/: Guid.cpp  TreeReader.cpp  V8Catalog.cpp  V8Container.cpp  V8Element.cpp  V8File.cpp  V8Format.cpp  V8Unpacker.cpp
src/core/src/metadata/: MetadataFactory.cpp  TMDO.cpp  TRequisite.cpp  t_catalog.cpp  t_comand.cpp  t_document.cpp  t_metadata_object_with_sections.cpp  t_moxel.cpp  t_tabular.cpp
src/core/src/metadata/sections/: section_commands.cpp  section_requisites.cpp
src/ui/: CMakeLists.txt  resources.qrc
src/ui/include/v8reader/ui/: ContentPane.h  MainWindow.h  MetadataTree.h
src/ui/src/: ContentPane.cpp  MainWindow.cpp  MetadataTree.cpp
tests/: CMakeLists.txt
tests/core/: V8File_test.cpp  test_metadata_classes.cpp
